<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="@dimen/marginxmedium"
    android:layout_marginEnd="@dimen/marginxmedium"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:id="@+id/layoutNote"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textviewTitle"
                style="@style/textviewextralargeBlack"
                android:fontFamily="@font/gilroy_semibold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:gravity="center"
                android:text="@string/title_notes"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"/>

            <TextView
                android:id="@+id/textviewSubTitle"
                style="@style/textviewSmallBlack"
                android:fontFamily="@font/gilroy_semibold"
                android:gravity="center"
                android:text="@string/personal_messages_to_you"
                app:layout_constraintTop_toBottomOf="@id/textviewTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.imageview.ShapeableImageView
                app:layout_constraintTop_toBottomOf="@id/textviewSubTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/imageViewBanner"
                android:scaleType="fitXY"
                tools:src="@drawable/ic_person"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.CornerRadiusImageView"
                android:layout_marginTop="@dimen/marginsmall"
                android:layout_marginEnd="@dimen/decoration_size"
                android:layout_marginStart="@dimen/decoration_size"
                android:layout_marginBottom="@dimen/decoration_size"
                app:layout_constraintDimensionRatio="H,16:16"
                android:layout_width="0dp"
                android:layout_height="0dp"/>
            <TextView
                android:id="@+id/textviewName_Age"
                tools:text="kanthi, 27"
                style="@style/textviewlargeWhite"
                android:maxLines="1"
                android:ellipsize="end"
                android:fontFamily="@font/gilroy_extrabold"
                android:layout_marginStart="@dimen/marginmedium"
                android:layout_marginEnd="@dimen/marginmedium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/textViewTapNotes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/textViewTapNotes"
                style="@style/textviewSmallWhite"
                android:text="@string/tap_to_review_50_notes"
                android:layout_margin="@dimen/marginmedium"
                android:fontFamily="@font/gilroy_semibold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/imageViewBanner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutInterested"
                android:layout_margin="@dimen/marginxmedium"
                app:layout_constraintTop_toBottomOf="@id/imageViewBanner"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/textviewInterestedInYou"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/textviewlargeBlack"
                    android:fontFamily="@font/gilroy_extrabold"
                    android:text="@string/interested_in_you"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="@dimen/textsizesmall"
                    android:gravity="center_vertical"
                    android:textStyle="normal"
                    android:fontFamily="@font/gilry_regular"
                    android:text="@string/premium_members"
                    app:layout_constraintEnd_toStartOf="@id/textviewUpgrade"
                    app:layout_constraintTop_toBottomOf="@id/textviewInterestedInYou"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/textviewUpgrade"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:padding="@dimen/padingxsmall"
                    android:background="@drawable/rounded_rectangle_orange"
                    style="@style/textviewMediumBlack"
                    android:fontFamily="@font/gilroy_semibold"
                    android:text="@string/upgrade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                app:layout_constraintTop_toBottomOf="@id/layoutInterested"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/marginsmall"

                android:id="@+id/recyclerViewLikes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</androidx.constraintlayout.widget.ConstraintLayout>